# stm322b55_ble

./: .cproject  .mxproject  .project  CMakeLists.txt  README.md  STM32WB55CGUX_FLASH.ld  ble_wb55.ioc  ble_wb55rgv6.ioc  retarget.c  stm32_hal.h
App/: platform.cpp  platform.h
Core/Inc/: FreeRTOSConfig.h  app_common.h  app_conf.h  app_debug.h  app_entry.h  hw_conf.h  hw_if.h  main.h  stm32_lpm_if.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h  utilities_conf.h
Core/Src/: app_debug.c  app_entry.c  app_freertos.c  freertos_port.c  hw_timerserver.c  hw_uart.c  main.c  stm32_lpm_if.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
STM32_WPAN/App/: app_ble.c  app_ble.h  ble_conf.h  ble_dbg_conf.h  dis_app.c  dis_app.h  hrs_app.c  hrs_app.h  tl_dbg_conf.h
Tasks/: BleTask.cpp  BleTask.h  LedTask.cpp  LedTask.h  OledDisplayTask.cpp  OledDisplayTask.h
USB_Device/App/: usb_device.h
cmake/: arm-none-eabi.cmake
lib/: u8g2_stm32.c
lib/ble/: bluetooth.cpp  bluetooth.h
lib/log/: log.c  log.h
